<resources>
    <string name="app_name">AttendanceManagerOffline</string>
</resources>
